--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "materialize-css": "^1.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "serve": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
